tests/spec/parse/snapshots/let_else_with_result.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() -> int {
    let Ok(value) = get_result() else { return -1; };
    value
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 14,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: EnumVariant {
                                identifier: "Ok",
                                fields: [
                                    Identifier {
                                        identifier: "value",
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 29,
                                            byte_length: 5,
                                        },
                                        binding: None,
                                    },
                                ],
                                rest: false,
                                resolution: Unresolved,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 9,
                                },
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: Identifier {
                                value: "get_result",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 38,
                                    byte_length: 10,
                                },
                                resolution: Unresolved,
                            },
                            args: [],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 12,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Else {
                            block: Block {
                                items: [
                                    Return {
                                        expression: Unary {
                                            operator: Negative,
                                            expression: Literal {
                                                literal: Integer {
                                                    value: 1,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 66,
                                                    byte_length: 1,
                                                },
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 65,
                                                byte_length: 2,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 58,
                                            byte_length: 9,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 56,
                                    byte_length: 14,
                                },
                            },
                            else_span: Span {
                                file_id: 0,
                                byte_offset: 51,
                                byte_length: 4,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 22,
                            byte_length: 48,
                        },
                    },
                    Identifier {
                        value: "value",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 74,
                            byte_length: 5,
                        },
                        resolution: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 18,
                    byte_length: 63,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 80,
        },
    },
]
