tests/spec/parse/snapshots/let_mutable_with_type.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let mut active: bool = true;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "active",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: Some(
                                Constructor {
                                    name: "bool",
                                    params: [],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 31,
                                        byte_length: 4,
                                    },
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            mut_span: Some(
                                Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                            ),
                        },
                        value: Literal {
                            literal: Boolean(
                                true,
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 38,
                                byte_length: 4,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 27,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 34,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 44,
        },
    },
]
