tests/spec/parse/snapshots/let_with_type.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let message: string = "hello";
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "message",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 7,
                                },
                                binding: None,
                            },
                            annotation: Some(
                                Constructor {
                                    name: "string",
                                    params: [],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 28,
                                        byte_length: 6,
                                    },
                                },
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: String {
                                value: "hello",
                                raw: false,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 37,
                                byte_length: 7,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 29,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 36,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 46,
        },
    },
]
