tests/spec/parse/snapshots/loop_with_break.snap
---
source: tests/spec/parse/mod.rs
description: "\nfn test() {\n  loop {\n    if should_stop() {\n      break;\n    }\n  }\n}\n"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Loop {
                        body: Block {
                            items: [
                                If {
                                    condition: Call {
                                        expression: Identifier {
                                            value: "should_stop",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 29,
                                                byte_length: 11,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 29,
                                            byte_length: 13,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    consequence: Block {
                                        items: [
                                            Break {
                                                value: None,
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 51,
                                                    byte_length: 5,
                                                },
                                            },
                                        ],
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 43,
                                            byte_length: 20,
                                        },
                                    },
                                    alternative: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 37,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 20,
                                byte_length: 47,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 52,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 58,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 68,
        },
    },
]
