tests/spec/parse/snapshots/loop_with_break_value.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let x = loop {
      if done() {
        break 42;
      }
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Loop {
                            body: Block {
                                items: [
                                    If {
                                        condition: Call {
                                            expression: Identifier {
                                                value: "done",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 37,
                                                    byte_length: 4,
                                                },
                                                resolution: Unresolved,
                                            },
                                            args: [],
                                            spread: None,
                                            type_arguments: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 37,
                                                byte_length: 6,
                                            },
                                            call_kind: Unresolved,
                                        },
                                        consequence: Block {
                                            items: [
                                                Break {
                                                    value: Some(
                                                        Literal {
                                                            literal: Integer {
                                                                value: 42,
                                                                text: None,
                                                            },
                                                            ty: Var {
                                                                id: uninferred,
                                                            },
                                                            span: Span {
                                                                file_id: 0,
                                                                byte_offset: 58,
                                                                byte_length: 2,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 52,
                                                        byte_length: 8,
                                                    },
                                                },
                                            ],
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 44,
                                                byte_length: 23,
                                            },
                                        },
                                        alternative: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 34,
                                            byte_length: 33,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 28,
                                    byte_length: 43,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 23,
                                byte_length: 48,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 56,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 63,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 73,
        },
    },
]
